Added deployment script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' >
     <meta charset="utf-8">
+    <meta name="Description" content="This is a demo of fast path finding algorithm for arbitrary graphs.">
+    <meta name="keywords" content="a star, nba star, a*, path finding, shortest path, graph, map, visualization" />
+    <meta name="author" content="Andrei Kashcha">
     <title>Fast path finding with ngraph</title>
 <style>
 * {
