Changed graph selector

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta property="og:title" content="Fast path finding library ngraph.path" />
     <meta property="og:image" content="https://raw.githubusercontent.com/anvaka/ngraph.path.demo/master/docs/preview_large.png" />
-    <meta property="og:description" content="This is a demo of fast path finding algorithm for arbitrary graphs." />
+    <meta property="og:description" content="This is a demo of path finding algorithm for arbitrary graphs." />
 
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' >
     <meta charset="utf-8">
-    <meta name="Description" content="This is a demo of fast path finding algorithm for arbitrary graphs.">
+    <meta name="Description" content="This is a demo of path finding algorithm for arbitrary graphs.">
     <meta name="keywords" content="a star, nba star, a*, path finding, shortest path, graph, map, visualization" />
     <meta name="author" content="Andrei Kashcha">
     <title>Fast path finding library ngraph.path</title>
